<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Bandyer S.r.l. All Rights Reserved.
  ~ See LICENSE.txt for licensing information
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space16"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/room_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_server_url"
            android:importantForAutofill="noExcludeDescendants"
            android:labelFor="@+id/room_url"
            android.support.design:hintAnimationEnabled="true"
            android.support.design:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/room_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room_server_url"
                android:inputType="textUri" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space16"
            android:text="@string/type_title"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold" />

        <io.ghyeok.stickyswitch.widget.StickySwitch
            android:id="@+id/room_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space4"
            android:layout_marginTop="@dimen/space8"
            app:ss_animationDuration="300"
            app:ss_animationType="line"
            app:ss_iconPadding="10dp"
            app:ss_iconSize="0dp"
            app:ss_selectedTextSize="@dimen/text_h4"
            app:ss_sliderBackgroundColor="@color/colorPrimary"
            app:ss_switchColor="@color/colorAccent"
            app:ss_textVisibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_p2p" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/type_mtm" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space16"
            android:text="@string/role_title"
            android:textSize="@dimen/text_h2"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space16"
            android:text="@string/role_presenter"
            android:textAllCaps="false"
            app:backgroundTint="@android:color/white" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/auto_pub_sub_switch"
            android:layout_marginTop="@dimen/space16"
            android:layout_width="match_parent"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/auto_pub_sub" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/mute_audio"
            android:layout_marginTop="@dimen/space16"
            android:layout_width="match_parent"
            android:checked="false"
            android:layout_height="wrap_content"
            android:text="@string/mute_all_subscribers_audio" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/space16"
        android:text="@string/join_button"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorAccent" />

</RelativeLayout>