<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Bandyer S.r.l. All Rights Reserved.
  ~ See LICENSE.txt for licensing information
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1ECECEC"
        android:padding="8dp"
        grid:columnCount="2"
        grid:rowCount="2">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            grid:layout_column="0"
            grid:layout_columnWeight="1"
            grid:layout_row="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/space8"
                android:text="@string/encoder"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_h2" />

            <TextView
                android:id="@+id/encoderStatsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/space8"
                android:text="@string/bandwidth"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_h2" />

            <TextView
                android:id="@+id/bandwidthStatsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            grid:layout_column="1"
            grid:layout_columnWeight="1"
            grid:layout_row="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/space8"
                android:text="@string/connection"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_h2" />

            <TextView
                android:id="@+id/connectionStatsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            grid:layout_column="0"
            grid:layout_columnWeight="1"
            grid:layout_row="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/space8"
                android:text="@string/receiver"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_h2" />

            <TextView
                android:id="@+id/receiverStatsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            grid:layout_column="1"
            grid:layout_columnWeight="1"
            grid:layout_row="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/space8"
                android:text="@string/sender"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_h2" />

            <TextView
                android:id="@+id/senderStatsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />

        </LinearLayout>


    </android.support.v7.widget.GridLayout>
</ScrollView>
